// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match a snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    handleLogOut={[Function]}
    loggedIn={false}
    username=""
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Link
          className="header__h1"
          replace={false}
          to="/"
>
          Lost & Found
</Link>,
        <ul
          className="header__nav-list"
>
          <li
                    className="header__nav-list-item"
          >
                    <Link
                              className="header__nav-link"
                              replace={false}
                              to="/user-forms/login"
                    >
                              Log In
                    </Link>
          </li>
          <li
                    className="header__nav-list-item"
          >
                    <Link
                              className="header__nav-link"
                              replace={false}
                              to="/user-forms/signup"
                    >
                              Sign Up
                    </Link>
          </li>
</ul>,
      ],
      "className": "header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Lost & Found",
          "className": "header__h1",
          "replace": false,
          "to": "/",
        },
        "ref": null,
        "rendered": "Lost & Found",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            false,
            <li
              className="header__nav-list-item"
>
              <Link
                            className="header__nav-link"
                            replace={false}
                            to="/user-forms/login"
              >
                            Log In
              </Link>
</li>,
            <li
              className="header__nav-list-item"
>
              <Link
                            className="header__nav-link"
                            replace={false}
                            to="/user-forms/signup"
              >
                            Sign Up
              </Link>
</li>,
          ],
          "className": "header__nav-list",
        },
        "ref": null,
        "rendered": Array [
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="header__nav-link"
                replace={false}
                to="/user-forms/login"
>
                Log In
</Link>,
              "className": "header__nav-list-item",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Log In",
                "className": "header__nav-link",
                "replace": false,
                "to": "/user-forms/login",
              },
              "ref": null,
              "rendered": "Log In",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="header__nav-link"
                replace={false}
                to="/user-forms/signup"
>
                Sign Up
</Link>,
              "className": "header__nav-list-item",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Sign Up",
                "className": "header__nav-link",
                "replace": false,
                "to": "/user-forms/signup",
              },
              "ref": null,
              "rendered": "Sign Up",
              "type": [Function],
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            className="header__h1"
            replace={false}
            to="/"
>
            Lost & Found
</Link>,
          <ul
            className="header__nav-list"
>
            <li
                        className="header__nav-list-item"
            >
                        <Link
                                    className="header__nav-link"
                                    replace={false}
                                    to="/user-forms/login"
                        >
                                    Log In
                        </Link>
            </li>
            <li
                        className="header__nav-list-item"
            >
                        <Link
                                    className="header__nav-link"
                                    replace={false}
                                    to="/user-forms/signup"
                        >
                                    Sign Up
                        </Link>
            </li>
</ul>,
        ],
        "className": "header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Lost & Found",
            "className": "header__h1",
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": "Lost & Found",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              false,
              <li
                className="header__nav-list-item"
>
                <Link
                                className="header__nav-link"
                                replace={false}
                                to="/user-forms/login"
                >
                                Log In
                </Link>
</li>,
              <li
                className="header__nav-list-item"
>
                <Link
                                className="header__nav-link"
                                replace={false}
                                to="/user-forms/signup"
                >
                                Sign Up
                </Link>
</li>,
            ],
            "className": "header__nav-list",
          },
          "ref": null,
          "rendered": Array [
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="header__nav-link"
                  replace={false}
                  to="/user-forms/login"
>
                  Log In
</Link>,
                "className": "header__nav-list-item",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Log In",
                  "className": "header__nav-link",
                  "replace": false,
                  "to": "/user-forms/login",
                },
                "ref": null,
                "rendered": "Log In",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="header__nav-link"
                  replace={false}
                  to="/user-forms/signup"
>
                  Sign Up
</Link>,
                "className": "header__nav-list-item",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Sign Up",
                  "className": "header__nav-link",
                  "replace": false,
                  "to": "/user-forms/signup",
                },
                "ref": null,
                "rendered": "Sign Up",
                "type": [Function],
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Header should match a snapshot when signed in 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    handleLogOut={[Function]}
    loggedIn={true}
    username="jon"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Link
          className="header__h1"
          replace={false}
          to="/"
>
          Lost & Found
</Link>,
        <ul
          className="header__nav-list"
>
          <Link
                    className="header__nav-link"
                    replace={false}
                    to="/items"
          >
                    My Items
          </Link>
          <li
                    className="header__nav-list-item"
          >
                    <Link
                              className="header__nav-link"
                              onClick={[Function]}
                              replace={false}
                              to="/"
                    >
                              Log Out
                    </Link>
          </li>
          <li
                    className="header__nav-list-item"
          >
                    <span
                              className="header__username"
                    >
                              jon
                    </span>
          </li>
</ul>,
      ],
      "className": "header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Lost & Found",
          "className": "header__h1",
          "replace": false,
          "to": "/",
        },
        "ref": null,
        "rendered": "Lost & Found",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Link
              className="header__nav-link"
              replace={false}
              to="/items"
>
              My Items
</Link>,
            <li
              className="header__nav-list-item"
>
              <Link
                            className="header__nav-link"
                            onClick={[Function]}
                            replace={false}
                            to="/"
              >
                            Log Out
              </Link>
</li>,
            <li
              className="header__nav-list-item"
>
              <span
                            className="header__username"
              >
                            jon
              </span>
</li>,
          ],
          "className": "header__nav-list",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "My Items",
              "className": "header__nav-link",
              "replace": false,
              "to": "/items",
            },
            "ref": null,
            "rendered": "My Items",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="header__nav-link"
                onClick={[Function]}
                replace={false}
                to="/"
>
                Log Out
</Link>,
              "className": "header__nav-list-item",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Log Out",
                "className": "header__nav-link",
                "onClick": [Function],
                "replace": false,
                "to": "/",
              },
              "ref": null,
              "rendered": "Log Out",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <span
                className="header__username"
>
                jon
</span>,
              "className": "header__nav-list-item",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "jon",
                "className": "header__username",
              },
              "ref": null,
              "rendered": "jon",
              "type": "span",
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            className="header__h1"
            replace={false}
            to="/"
>
            Lost & Found
</Link>,
          <ul
            className="header__nav-list"
>
            <Link
                        className="header__nav-link"
                        replace={false}
                        to="/items"
            >
                        My Items
            </Link>
            <li
                        className="header__nav-list-item"
            >
                        <Link
                                    className="header__nav-link"
                                    onClick={[Function]}
                                    replace={false}
                                    to="/"
                        >
                                    Log Out
                        </Link>
            </li>
            <li
                        className="header__nav-list-item"
            >
                        <span
                                    className="header__username"
                        >
                                    jon
                        </span>
            </li>
</ul>,
        ],
        "className": "header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Lost & Found",
            "className": "header__h1",
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": "Lost & Found",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Link
                className="header__nav-link"
                replace={false}
                to="/items"
>
                My Items
</Link>,
              <li
                className="header__nav-list-item"
>
                <Link
                                className="header__nav-link"
                                onClick={[Function]}
                                replace={false}
                                to="/"
                >
                                Log Out
                </Link>
</li>,
              <li
                className="header__nav-list-item"
>
                <span
                                className="header__username"
                >
                                jon
                </span>
</li>,
            ],
            "className": "header__nav-list",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "My Items",
                "className": "header__nav-link",
                "replace": false,
                "to": "/items",
              },
              "ref": null,
              "rendered": "My Items",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="header__nav-link"
                  onClick={[Function]}
                  replace={false}
                  to="/"
>
                  Log Out
</Link>,
                "className": "header__nav-list-item",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Log Out",
                  "className": "header__nav-link",
                  "onClick": [Function],
                  "replace": false,
                  "to": "/",
                },
                "ref": null,
                "rendered": "Log Out",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <span
                  className="header__username"
>
                  jon
</span>,
                "className": "header__nav-list-item",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "jon",
                  "className": "header__username",
                },
                "ref": null,
                "rendered": "jon",
                "type": "span",
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
